header alignment fixed

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -20,11 +20,12 @@
   display: flex;
   align-items: center;
   flex: 1;
+  /* max-width: fit-content; */
   padding: 0 10px;
   height: 30px;
-  justify-content: space-between;
+  justify-content: space-around;
   max-width: 30vw;
-  margin-left: -22%;
+  margin-left: -45%;
   margin-top: 0.5%;
 }
 .header__right {
